@@ -249,197 +249,6 @@ proc sn_motif_buttons {frm pos default args} {
     }
 }
 
-#
-# tk_dialog:
-#
-# This procedure displays a dialog box, waits for a button in the dialog
-# to be invoked, then returns the index of the selected button.  If the
-# dialog somehow gets destroyed, -1 is returned.
-#
-# Arguments:
-# w             -	Window to use for dialog top-level.
-# title         -	Title to display in dialog's decorative frame.
-# text          -	Message to display in dialog.
-# bitmap        -	Bitmap to display in dialog (empty string means none).
-# default       -	Index of button that is to display the default ring
-#		          (-1 means none).
-# create_widgets- command to be called, to create new addional widgets or
-#                 to manipulate existing behavior
-# args          -	One or more strings to display in buttons across the
-#		          bottom of the dialog box.
-proc tk_dialog_with_widgets {w title text bitmap default create_widgets args} {
-    global tkPriv tcl_platform
-
-    set oldFocus [focus]
-    # FIXME: this is a hack to work around an error. We used to use our own
-    # custom "grab" command. The Tk grab seems to have changed WRT the results
-    # you get when the passed in window does not exist. The "real" fix will be
-    # to totally revamp our use of grab.
-    if {[winfo exists ${w}]} {
-        set oldGrab [grab current ${w}]
-    } else {
-        set oldGrab [grab current]
-    }
-    if {${oldGrab} != ""} {
-        set grabStatus [grab status ${oldGrab}]
-    }
-
-    # 1. Create the top-level window and divide it into top
-    # and bottom parts.
-# FIXME: This needs to use sourcenav::Window
-    #catch {$w delete}
-    catch {destroy ${w}}
-    toplevel ${w} -class Dialog
-    wm title ${w} ${title}
-    wm iconname ${w} Dialog
-
-    #bind escape/close event
-    on_close ${w} "set tkPriv(${w},button) -1"
-
-    frame ${w}.bot
-    frame ${w}.top
-    if {$tcl_platform(platform) == "unix"} {
-        ${w}.bot configure -relief raised -bd 1
-        ${w}.top configure -relief raised -bd 1
-    }
-    pack ${w}.bot -side bottom -fill both
-    pack ${w}.top -side top -fill both -expand 1
-
-    # 2.1 Add client procedure to create widgets
-    eval ${create_widgets} ${w}
-
-    # 2. Fill the top part with bitmap and message (use the option
-    # database for -wraplength so that it can be overridden by
-    # the caller).
-
-    #option add *Dialog.msg.wrapLength 3i widgetDefault
-    label ${w}.msg -justify left -text ${text}
-    pack ${w}.msg -in ${w}.top -side right -expand 1 -fill both -padx 3m\
-      -pady 3m
-    if {${bitmap} != ""} {
-        if {($tcl_platform(platform) == "macintosh") &&(${bitmap} == "error")} {
-            set bitmap "stop"
-        }
-        label ${w}.bitmap -image ${bitmap}
-        pack ${w}.bitmap -in ${w}.top -side left -padx 3m -pady 3m
-    }
-
-    # 3. Create a row of buttons at the bottom of the dialog.
-
-    set len 10
-    foreach but ${args} {
-        set ll [string length ${but}]
-        if {${ll} < 14 && ${len} < ${ll}} {
-            set len ${ll}
-        }
-    }
-    set i 0
-    foreach but ${args} {
-        set cmd [list button ${w}.button${i} -text ${but} -command " set\
-          tkPriv(${w},button) ${i} "]
-        if {[string length ${but}] < ${len}} {
-            lappend cmd -width ${len}
-        }
-
-        if {${i} == ${default}} {
-            lappend cmd -default active
-        } else {
-            lappend cmd -default normal
-        }
-
-        #create button
-        eval ${cmd}
-
-        grid ${w}.button${i} -in ${w}.bot -column ${i} -row 0 -sticky ew\
-          -padx 10 -pady 5
-        grid columnconfigure ${w}.bot ${i}
-        # We boost the size of some Mac buttons for l&f
-        if {$tcl_platform(platform) == "macintosh"} {
-            set t_m_p [string tolower ${but}]
-            if {(${t_m_p} == "ok") ||(${t_m_p} == "cancel")} {
-                grid columnconfigure ${w}.bot ${i} -minsize [expr 59 + 20]
-            }
-        }
-        incr i
-    }
-    set lastnum [expr ${i} - 1]
-
-    # 4. Create a binding for <Return> on the dialog if there is a
-    # default button.
-
-    if {${default} >= 0} {
-        bind ${w} <Return> "
-	    ${w}.button${default} configure -state active -relief sunken
-	    update idletasks
-	    after 100
-	    set tkPriv(${w},button) ${default}
-	"
-    }
-
-    # 5. Create a <Destroy> binding for the window that sets the
-    # button variable to -1;  this is needed in case something happens
-    # that destroys the window, such as its parent window being destroyed.
-    bind ${w} <Destroy> "set tkPriv(${w},button) -1"
-
-    # 6. Withdraw the window, then update all the geometry information
-    # so we know how big it wants to be, then center the window in the
-    # display and de-iconify it.
-
-    wm withdraw ${w}
-
-    update idletasks
-
-    set x [expr [winfo screenwidth ${w}]/2 - [winfo reqwidth ${w}]/2 -\
-      [winfo vrootx [winfo parent ${w}]]]
-    set y [expr [winfo screenheight ${w}]/2 - [winfo reqheight ${w}]/2\
-      - [winfo vrooty [winfo parent ${w}]]]
-    wm geom ${w} +${x}+${y}
-
-    wm deiconify ${w}
-
-    # 7. Set a grab and claim the focus too.
-
-    grab ${w}
-
-    if {$default >= 0} {
-	window_configure ${w} deiconify ${w}.button${default}
-	focus ${w}.button${default}
-    }
-
-    update idle
-
-    # 8. Wait for the user to respond, then restore the focus and
-    # return the index of the selected button.  Restore the focus
-    # before deleting the window, since otherwise the window manager
-    # may take the focus away so we can't redirect it.  Finally,
-    # restore any grab that was in effect.
-
-    vwait tkPriv(${w},button)
-    catch {focus ${oldFocus}}
-    if {[winfo exists ${w}]} {
-        # It's possible that the window has already been destroyed,
-        # Delete the Destroy handler so that
-        # tkPriv($w,button) doesn't get reset by it.
-
-        bind ${w} <Destroy> {}
-        destroy ${w}
-    }
-    if {${oldGrab} != ""} {
-        if {${grabStatus} == "global"} {
-            grab -global ${oldGrab}
-        } else {
-            grab ${oldGrab}
-        }
-    }
-
-    #don't return -1
-    if {$tkPriv(${w},button) == -1} {
-        return ${lastnum}
-    } else {
-        return $tkPriv(${w},button)
-    }
-}
-
 itcl::class sourcenav::Dialog {
     inherit sourcenav::Window
 
